parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    SCOMMENT
    BEGINCOMMENT
    ENDCOMMENT
    MCOMMENT
    POWOP1
    POWOP2

Grammar

Rule 0     S' -> program
Rule 1     program -> declarationList
Rule 2     declarationList -> declarationList declaration
Rule 3     declarationList -> declaration
Rule 4     declaration -> varDeclaration
Rule 5     declaration -> funDeclaration
Rule 6     varDeclaration -> typeSpecifier ID SEMICOLON
Rule 7     varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 8     typeSpecifier -> INT
Rule 9     typeSpecifier -> VOID
Rule 10    funDeclaration -> typeSpecifier ID LPARENT params RPARENT compoundStmt
Rule 11    params -> paramList
Rule 12    params -> VOID
Rule 13    paramList -> paramList COMMA param
Rule 14    paramList -> param
Rule 15    param -> typeSpecifier ID
Rule 16    param -> typeSpecifier ID LBRACKET RBRACKET
Rule 17    compoundStmt -> LBRACE localDeclarations statementList RBRACE
Rule 18    localDeclarations -> localDeclarations varDeclaration
Rule 19    localDeclarations -> empty
Rule 20    statementList -> statementList statement
Rule 21    statementList -> empty
Rule 22    statement -> expressionStmt
Rule 23    statement -> compoundStmt
Rule 24    statement -> selectionStmt
Rule 25    statement -> iterationStmt
Rule 26    statement -> returnStmt
Rule 27    expressionStmt -> expression SEMICOLON
Rule 28    expressionStmt -> SEMICOLON
Rule 29    selectionStmt -> IF LPARENT expression RPARENT statement
Rule 30    selectionStmt -> IF LPARENT expression RPARENT statement ELSE statement
Rule 31    iterationStmt -> WHILE LPARENT expression RPARENT statement
Rule 32    returnStmt -> RETURN SEMICOLON
Rule 33    returnStmt -> RETURN expression SEMICOLON
Rule 34    expression -> var ASSIGN expression
Rule 35    expression -> simpleExpression
Rule 36    var -> ID
Rule 37    var -> ID LBRACKET expression RBRACKET
Rule 38    simpleExpression -> additiveExpression relop additiveExpression
Rule 39    simpleExpression -> additiveExpression
Rule 40    relop -> LEQ
Rule 41    relop -> LT
Rule 42    relop -> GT
Rule 43    relop -> GEQ
Rule 44    relop -> EQ
Rule 45    relop -> NEQ
Rule 46    additiveExpression -> additiveExpression addop term
Rule 47    additiveExpression -> term
Rule 48    addop -> PLUS
Rule 49    addop -> MINUS
Rule 50    term -> term mulop factor
Rule 51    term -> factor
Rule 52    mulop -> TIMES
Rule 53    mulop -> DIVIDE
Rule 54    factor -> LPARENT expression RPARENT
Rule 55    factor -> var
Rule 56    factor -> call
Rule 57    factor -> NUMBER
Rule 58    call -> ID LPARENT args RPARENT
Rule 59    args -> argList
Rule 60    args -> empty
Rule 61    argList -> argList COMMA expression
Rule 62    argList -> expression
Rule 63    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 34
BEGINCOMMENT         : 
COMMA                : 13 61
DIVIDE               : 53
ELSE                 : 30
ENDCOMMENT           : 
EQ                   : 44
GEQ                  : 43
GT                   : 42
ID                   : 6 7 10 15 16 36 37 58
IF                   : 29 30
INT                  : 8
LBRACE               : 17
LBRACKET             : 7 16 37
LEQ                  : 40
LPARENT              : 10 29 30 31 54 58
LT                   : 41
MCOMMENT             : 
MINUS                : 49
NEQ                  : 45
NUMBER               : 7 57
PLUS                 : 48
POWOP1               : 
POWOP2               : 
RBRACE               : 17
RBRACKET             : 7 16 37
RETURN               : 32 33
RPARENT              : 10 29 30 31 54 58
SCOMMENT             : 
SEMICOLON            : 6 7 27 28 32 33
TIMES                : 52
VOID                 : 9 12
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

additiveExpression   : 38 38 39 46
addop                : 46
argList              : 59 61
args                 : 58
call                 : 56
compoundStmt         : 10 23
declaration          : 2 3
declarationList      : 1 2
empty                : 19 21 60
expression           : 27 29 30 31 33 34 37 54 61 62
expressionStmt       : 22
factor               : 50 51
funDeclaration       : 5
iterationStmt        : 25
localDeclarations    : 17 18
mulop                : 50
param                : 13 14
paramList            : 11 13
params               : 10
program              : 0
relop                : 38
returnStmt           : 26
selectionStmt        : 24
simpleExpression     : 35
statement            : 20 29 30 30 31
statementList        : 17 20
term                 : 46 47 50
typeSpecifier        : 6 7 10 15 16
var                  : 34 55
varDeclaration       : 4 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarationList
    (2) declarationList -> . declarationList declaration
    (3) declarationList -> . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . funDeclaration
    (6) varDeclaration -> . typeSpecifier ID SEMICOLON
    (7) varDeclaration -> . typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (10) funDeclaration -> . typeSpecifier ID LPARENT params RPARENT compoundStmt
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    program                        shift and go to state 1
    declarationList                shift and go to state 2
    declaration                    shift and go to state 3
    varDeclaration                 shift and go to state 4
    funDeclaration                 shift and go to state 5
    typeSpecifier                  shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declarationList .
    (2) declarationList -> declarationList . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . funDeclaration
    (6) varDeclaration -> . typeSpecifier ID SEMICOLON
    (7) varDeclaration -> . typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (10) funDeclaration -> . typeSpecifier ID LPARENT params RPARENT compoundStmt
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . VOID

    $end            reduce using rule 1 (program -> declarationList .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaration                    shift and go to state 9
    varDeclaration                 shift and go to state 4
    funDeclaration                 shift and go to state 5
    typeSpecifier                  shift and go to state 6

state 3

    (3) declarationList -> declaration .

    INT             reduce using rule 3 (declarationList -> declaration .)
    VOID            reduce using rule 3 (declarationList -> declaration .)
    $end            reduce using rule 3 (declarationList -> declaration .)


state 4

    (4) declaration -> varDeclaration .

    INT             reduce using rule 4 (declaration -> varDeclaration .)
    VOID            reduce using rule 4 (declaration -> varDeclaration .)
    $end            reduce using rule 4 (declaration -> varDeclaration .)


state 5

    (5) declaration -> funDeclaration .

    INT             reduce using rule 5 (declaration -> funDeclaration .)
    VOID            reduce using rule 5 (declaration -> funDeclaration .)
    $end            reduce using rule 5 (declaration -> funDeclaration .)


state 6

    (6) varDeclaration -> typeSpecifier . ID SEMICOLON
    (7) varDeclaration -> typeSpecifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (10) funDeclaration -> typeSpecifier . ID LPARENT params RPARENT compoundStmt

    ID              shift and go to state 10


state 7

    (8) typeSpecifier -> INT .

    ID              reduce using rule 8 (typeSpecifier -> INT .)


state 8

    (9) typeSpecifier -> VOID .

    ID              reduce using rule 9 (typeSpecifier -> VOID .)


state 9

    (2) declarationList -> declarationList declaration .

    INT             reduce using rule 2 (declarationList -> declarationList declaration .)
    VOID            reduce using rule 2 (declarationList -> declarationList declaration .)
    $end            reduce using rule 2 (declarationList -> declarationList declaration .)


state 10

    (6) varDeclaration -> typeSpecifier ID . SEMICOLON
    (7) varDeclaration -> typeSpecifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (10) funDeclaration -> typeSpecifier ID . LPARENT params RPARENT compoundStmt

    SEMICOLON       shift and go to state 11
    LBRACKET        shift and go to state 12
    LPARENT         shift and go to state 13


state 11

    (6) varDeclaration -> typeSpecifier ID SEMICOLON .

    INT             reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    VOID            reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    $end            reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    RBRACE          reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    LBRACE          reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    IF              reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    WHILE           reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    RETURN          reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    ID              reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    LPARENT         reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)
    NUMBER          reduce using rule 6 (varDeclaration -> typeSpecifier ID SEMICOLON .)


state 12

    (7) varDeclaration -> typeSpecifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 14


state 13

    (10) funDeclaration -> typeSpecifier ID LPARENT . params RPARENT compoundStmt
    (11) params -> . paramList
    (12) params -> . VOID
    (13) paramList -> . paramList COMMA param
    (14) paramList -> . param
    (15) param -> . typeSpecifier ID
    (16) param -> . typeSpecifier ID LBRACKET RBRACKET
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . VOID

    VOID            shift and go to state 18
    INT             shift and go to state 7

    typeSpecifier                  shift and go to state 15
    params                         shift and go to state 16
    paramList                      shift and go to state 17
    param                          shift and go to state 19

state 14

    (7) varDeclaration -> typeSpecifier ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 20


state 15

    (15) param -> typeSpecifier . ID
    (16) param -> typeSpecifier . ID LBRACKET RBRACKET

    ID              shift and go to state 21


state 16

    (10) funDeclaration -> typeSpecifier ID LPARENT params . RPARENT compoundStmt

    RPARENT         shift and go to state 22


state 17

    (11) params -> paramList .
    (13) paramList -> paramList . COMMA param

    RPARENT         reduce using rule 11 (params -> paramList .)
    COMMA           shift and go to state 23


state 18

    (12) params -> VOID .
    (9) typeSpecifier -> VOID .

    RPARENT         reduce using rule 12 (params -> VOID .)
    ID              reduce using rule 9 (typeSpecifier -> VOID .)


state 19

    (14) paramList -> param .

    COMMA           reduce using rule 14 (paramList -> param .)
    RPARENT         reduce using rule 14 (paramList -> param .)


state 20

    (7) varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 24


state 21

    (15) param -> typeSpecifier ID .
    (16) param -> typeSpecifier ID . LBRACKET RBRACKET

    COMMA           reduce using rule 15 (param -> typeSpecifier ID .)
    RPARENT         reduce using rule 15 (param -> typeSpecifier ID .)
    LBRACKET        shift and go to state 25


state 22

    (10) funDeclaration -> typeSpecifier ID LPARENT params RPARENT . compoundStmt
    (17) compoundStmt -> . LBRACE localDeclarations statementList RBRACE

    LBRACE          shift and go to state 27

    compoundStmt                   shift and go to state 26

state 23

    (13) paramList -> paramList COMMA . param
    (15) param -> . typeSpecifier ID
    (16) param -> . typeSpecifier ID LBRACKET RBRACKET
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    param                          shift and go to state 28
    typeSpecifier                  shift and go to state 15

state 24

    (7) varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .

    INT             reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    VOID            reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    $end            reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    RBRACE          reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    SEMICOLON       reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    LBRACE          reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    IF              reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    WHILE           reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    RETURN          reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    ID              reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    LPARENT         reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    NUMBER          reduce using rule 7 (varDeclaration -> typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)


state 25

    (16) param -> typeSpecifier ID LBRACKET . RBRACKET

    RBRACKET        shift and go to state 29


state 26

    (10) funDeclaration -> typeSpecifier ID LPARENT params RPARENT compoundStmt .

    INT             reduce using rule 10 (funDeclaration -> typeSpecifier ID LPARENT params RPARENT compoundStmt .)
    VOID            reduce using rule 10 (funDeclaration -> typeSpecifier ID LPARENT params RPARENT compoundStmt .)
    $end            reduce using rule 10 (funDeclaration -> typeSpecifier ID LPARENT params RPARENT compoundStmt .)


state 27

    (17) compoundStmt -> LBRACE . localDeclarations statementList RBRACE
    (18) localDeclarations -> . localDeclarations varDeclaration
    (19) localDeclarations -> . empty
    (63) empty -> .

    INT             reduce using rule 63 (empty -> .)
    VOID            reduce using rule 63 (empty -> .)
    RBRACE          reduce using rule 63 (empty -> .)
    SEMICOLON       reduce using rule 63 (empty -> .)
    LBRACE          reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    ID              reduce using rule 63 (empty -> .)
    LPARENT         reduce using rule 63 (empty -> .)
    NUMBER          reduce using rule 63 (empty -> .)

    localDeclarations              shift and go to state 30
    empty                          shift and go to state 31

state 28

    (13) paramList -> paramList COMMA param .

    COMMA           reduce using rule 13 (paramList -> paramList COMMA param .)
    RPARENT         reduce using rule 13 (paramList -> paramList COMMA param .)


state 29

    (16) param -> typeSpecifier ID LBRACKET RBRACKET .

    COMMA           reduce using rule 16 (param -> typeSpecifier ID LBRACKET RBRACKET .)
    RPARENT         reduce using rule 16 (param -> typeSpecifier ID LBRACKET RBRACKET .)


state 30

    (17) compoundStmt -> LBRACE localDeclarations . statementList RBRACE
    (18) localDeclarations -> localDeclarations . varDeclaration
    (20) statementList -> . statementList statement
    (21) statementList -> . empty
    (6) varDeclaration -> . typeSpecifier ID SEMICOLON
    (7) varDeclaration -> . typeSpecifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (63) empty -> .
    (8) typeSpecifier -> . INT
    (9) typeSpecifier -> . VOID

    RBRACE          reduce using rule 63 (empty -> .)
    SEMICOLON       reduce using rule 63 (empty -> .)
    LBRACE          reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    ID              reduce using rule 63 (empty -> .)
    LPARENT         reduce using rule 63 (empty -> .)
    NUMBER          reduce using rule 63 (empty -> .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    statementList                  shift and go to state 32
    varDeclaration                 shift and go to state 33
    empty                          shift and go to state 34
    typeSpecifier                  shift and go to state 35

state 31

    (19) localDeclarations -> empty .

    INT             reduce using rule 19 (localDeclarations -> empty .)
    VOID            reduce using rule 19 (localDeclarations -> empty .)
    RBRACE          reduce using rule 19 (localDeclarations -> empty .)
    SEMICOLON       reduce using rule 19 (localDeclarations -> empty .)
    LBRACE          reduce using rule 19 (localDeclarations -> empty .)
    IF              reduce using rule 19 (localDeclarations -> empty .)
    WHILE           reduce using rule 19 (localDeclarations -> empty .)
    RETURN          reduce using rule 19 (localDeclarations -> empty .)
    ID              reduce using rule 19 (localDeclarations -> empty .)
    LPARENT         reduce using rule 19 (localDeclarations -> empty .)
    NUMBER          reduce using rule 19 (localDeclarations -> empty .)


state 32

    (17) compoundStmt -> LBRACE localDeclarations statementList . RBRACE
    (20) statementList -> statementList . statement
    (22) statement -> . expressionStmt
    (23) statement -> . compoundStmt
    (24) statement -> . selectionStmt
    (25) statement -> . iterationStmt
    (26) statement -> . returnStmt
    (27) expressionStmt -> . expression SEMICOLON
    (28) expressionStmt -> . SEMICOLON
    (17) compoundStmt -> . LBRACE localDeclarations statementList RBRACE
    (29) selectionStmt -> . IF LPARENT expression RPARENT statement
    (30) selectionStmt -> . IF LPARENT expression RPARENT statement ELSE statement
    (31) iterationStmt -> . WHILE LPARENT expression RPARENT statement
    (32) returnStmt -> . RETURN SEMICOLON
    (33) returnStmt -> . RETURN expression SEMICOLON
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simpleExpression
    (36) var -> . ID
    (37) var -> . ID LBRACKET expression RBRACKET
    (38) simpleExpression -> . additiveExpression relop additiveExpression
    (39) simpleExpression -> . additiveExpression
    (46) additiveExpression -> . additiveExpression addop term
    (47) additiveExpression -> . term
    (50) term -> . term mulop factor
    (51) term -> . factor
    (54) factor -> . LPARENT expression RPARENT
    (55) factor -> . var
    (56) factor -> . call
    (57) factor -> . NUMBER
    (58) call -> . ID LPARENT args RPARENT

    RBRACE          shift and go to state 36
    SEMICOLON       shift and go to state 44
    LBRACE          shift and go to state 27
    IF              shift and go to state 45
    WHILE           shift and go to state 47
    RETURN          shift and go to state 48
    ID              shift and go to state 51
    LPARENT         shift and go to state 46
    NUMBER          shift and go to state 56

    statement                      shift and go to state 37
    expressionStmt                 shift and go to state 38
    compoundStmt                   shift and go to state 39
    selectionStmt                  shift and go to state 40
    iterationStmt                  shift and go to state 41
    returnStmt                     shift and go to state 42
    expression                     shift and go to state 43
    var                            shift and go to state 49
    simpleExpression               shift and go to state 50
    additiveExpression             shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    call                           shift and go to state 55

state 33

    (18) localDeclarations -> localDeclarations varDeclaration .

    INT             reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    VOID            reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    RBRACE          reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    SEMICOLON       reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    LBRACE          reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    IF              reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    WHILE           reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    RETURN          reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    ID              reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    LPARENT         reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)
    NUMBER          reduce using rule 18 (localDeclarations -> localDeclarations varDeclaration .)


state 34

    (21) statementList -> empty .

    RBRACE          reduce using rule 21 (statementList -> empty .)
    SEMICOLON       reduce using rule 21 (statementList -> empty .)
    LBRACE          reduce using rule 21 (statementList -> empty .)
    IF              reduce using rule 21 (statementList -> empty .)
    WHILE           reduce using rule 21 (statementList -> empty .)
    RETURN          reduce using rule 21 (statementList -> empty .)
    ID              reduce using rule 21 (statementList -> empty .)
    LPARENT         reduce using rule 21 (statementList -> empty .)
    NUMBER          reduce using rule 21 (statementList -> empty .)


state 35

    (6) varDeclaration -> typeSpecifier . ID SEMICOLON
    (7) varDeclaration -> typeSpecifier . ID LBRACKET NUMBER RBRACKET SEMICOLON

    ID              shift and go to state 57


state 36
